# ukraine-air-alert-time-series

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: daily_oblast_metrics.csv  last12_oblast_summary.csv  next_day_baseline_predictions.csv
docs/: PRD.md  index.html
notebooks/: eda.ipynb
reports/: AI_LOG_PLACEHOLDER.md  air_alerts_report.docx  reflection.txt
src/air_alerts/: __init__.py  cli.py  constants.py  dashboard.py  data.py  metrics.py  model.py  pipeline.py  report.py  visuals.py
tests/: test_metrics.py  test_model.py  test_pipeline.py
